# BZSplatting

./: README.md  pyproject.toml
examples/: render_heart.py
src/bzsplatting/: __init__.py  bezier.py  splatting.py
tests/: test_renderer.py
